name:                http-trace
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/sigrlami/http-trace#readme
license:             BSD3
license-file:        LICENSE
author:              Sergey Bushnyak
maintainer:          sergey.bushnyak@sigrlami.eu
copyright:           Copyright: (c) 2016 Sergey Bushnyak
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable http-trace
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
