name:                http-trace
version:             0.1.0.0
synopsis:            Tracking http redirects 
description:         Please see README.md
homepage:            https://github.com/sigrlami/http-trace#readme
license:             MIT
license-file:        LICENSE
author:              Sergey Bushnyak
maintainer:          sergey.bushnyak@sigrlami.eu
copyright:           Copyright: (c) 2016 Sergey Bushnyak
category:            Web
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     Http.Trace
  build-depends:       base >= 4.7 && < 5
               ,       curl
               ,       pcre-heavy
               ,       template-haskell
               ,       text
               ,       safe
               ,       transformers
               ,       MissingH
  default-language:    Haskell2010

executable http-trace
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O1 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
               ,       http-trace
               ,       ascii-progress

  default-extensions:  OverloadedStrings
                    ,  TemplateHaskell